src/styles/global.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@import './syntaxHighlighting';
@import './Mermaid';

@import '~@fontsource/source-serif-pro/400.css';
@import '~@fontsource/source-serif-pro/400-italic.css';
@import '~@fontsource/source-serif-pro/700.css';
@import '~@fontsource/source-serif-pro/700-italic.css';

@import '~@fontsource/montagu-slab/500.css';
@import '~@fontsource/montagu-slab/700.css';

@import '~@fontsource/jetbrains-mono/400.css';
@import '~@fontsource/jetbrains-mono/400-italic.css';
@import '~@fontsource/jetbrains-mono/700.css';

@layer components {
  .Breakout {
    @apply md:-mx-breakout;
  }

  .BreakoutWithPadding {
    @apply px-normal md:px-breakout;
    @apply md:-mx-breakout;
  }

  .h1,
  .h2,
  .h3,
  .h4 {
    @apply font-display;
    @apply font-bold;
  }

  .h1-featured {
    @apply text-[2.4rem] sm:text-[3.26666667rem];
    @apply text-black  dark:text-white;
    @apply leading-[1.2];
  }

  .h1 {
    @apply text-[1.65rem] sm:text-[2.3rem];
    @apply leading-[1.2];
    @apply text-black  dark:text-white;
  }

  .h2 {
    @apply text-[1.4rem] sm:text-[1.7rem];

    @apply leading-[1.2] text-text-bold dark:text-text-bold-dark;
  }

  .h3 {
    @apply text-[1.25rem] sm:text-[1.35rem];

    @apply leading-[1.2];
    @apply text-text dark:text-text-dark;
  }

  .h4 {
    @apply text-[1.15rem] sm:text-[1.25rem];

    @apply leading-[1.1];
    @apply text-text-bold dark:text-text-bold-dark;
  }

  .Caption {
    @apply text-text-muted dark:text-text-muted-dark;
    @apply text-[0.86666667rem];
    @apply mt-tiny text-center;
    @apply text-sm;
  }
}

html {
  @apply text-[17px];
  @apply font-serif;
}

body {
  @apply font-serif;
  @apply transition-colors;

  // These are to prevent a flash of the opposite background when the device prefers a certain colors for the background
  @media (prefers-color-scheme: light) {
    @apply bg-body-bg;
  }

  @media (prefers-color-scheme: dark) {
    @apply bg-body-bg-dark;
  }
}

div::-webkit-scrollbar,
pre::-webkit-scrollbar {
  @apply w-[0.5em] h-[0.5em];
  @apply bg-caption-bg dark:bg-caption-bg-dark;
  @apply rounded-md;
}

div::-webkit-scrollbar-track,
pre::-webkit-scrollbar-track {
  @apply bg-caption-bg dark:bg-caption-bg-dark;
  @apply rounded-md;
}

div::-webkit-scrollbar-thumb,
pre::-webkit-scrollbar-thumb {
  @apply rounded-lg outline-none m-[1px];
  @apply bg-[#d0d0d0] dark:bg-[#555];
}

div::-webkit-scrollbar-track:vertical,
pre::-webkit-scrollbar-track:vertical,
div::-webkit-scrollbar-track:horizontal,
pre::-webkit-scrollbar-track:horizontal {
  @apply rounded-md;
}

div::-webkit-scrollbar-corner,
pre::-webkit-scrollbar-corner {
  @apply bg-caption-bg dark:bg-caption-bg-dark;
  @apply rounded-md;
}

body.light {
  @apply text-text bg-body-bg;
}

body.dark {
  @apply text-text-dark bg-body-bg-dark;
}

a {
  @apply underline;
  @apply transition duration-100;

  //// Normal
  // text color
  @apply text-primary-text dark:text-primary-text-dark;
  @apply hover:text-primary-text-focus hover:dark:text-primary-text-focus-dark;
  @apply focus:text-primary-text-focus focus:dark:text-primary-text-focus;

  // icon fill color
  @apply fill-primary-text dark:fill-primary-text-dark;
  @apply hover:fill-primary-text-focus hover:dark:fill-primary-text-focus-dark;
  @apply focus:fill-primary-text-focus focus:dark:fill-primary-text-focus;
}

a.muted {
  // text color
  @apply text-text-muted dark:text-text-muted-dark;
  @apply hover:text-text hover:dark:text-text-dark;
  @apply focus:text-text focus:dark:text-text;

  // icon fill color
  @apply fill-text-muted dark:fill-text-muted-dark;
  @apply hover:fill-text hover:dark:fill-text-dark;
  @apply focus:fill-text focus:dark:fill-text;
}

a.anchor.before {
  h2 & {
    @apply top-[0.55rem] -left-[0.35rem];
  }

  h3 & {
    @apply top-[0.3rem] -left-[0.3rem];
  }

  @apply hidden md:block;
}

h1 {
  @apply h1;
}

h1.featured {
  @apply h1-featured;
}

h2 {
  @apply h2;
}

h3 {
  @apply h3;
}

h4 {
  @apply h4;
}

h5 {
  @apply font-bold;
  @apply italic;
  @apply text-text-bold dark:text-text-bold-dark;
}

blockquote {
  @apply BreakoutWithPadding;
  @apply rounded-md;

  @apply text-[1.2rem] md:text-[1.3rem];
  @apply -tracking-[0.5px];
  @apply font-black;
  @apply italic;

  @apply pt-normal pr-normal pb-normal pl-big;
  @apply md:pt-medium md:pr-medium md:pb-medium md:pl-large;

  @apply relative leading-[1.5];

  @apply text-text-bold dark:text-text-bold-dark;
  @apply bg-caption-bg dark:bg-caption-bg-dark;

  > * {
    @apply p-0 m-0;
  }

  &::before {
    @apply content-['“'];

    @apply font-display;
    @apply not-italic;

    @apply text-primary mr-little;

    @apply absolute;

    @apply text-[1.7rem];
    @apply top-[2.4rem] left-[1rem];

    @screen md {
      @apply top-[3.1rem] left-breakout -ml-[3px];
    }
  }
}

.body-styles {
  h2 {
    @apply mt-large mb-small;
  }

  h3 {
    @apply mt-medium mb-small;
  }

  .header-link {
    @apply hidden md:block;

    @apply text-text-muted dark:text-text-muted;
    @apply opacity-50;
    @apply no-underline;

    svg {
      @apply mr-tiny relative visible;
    }

    &:hover,
    &:focus {
      @apply opacity-100;
      @apply text-primary-text dark:text-primary-text-dark;
    }
  }

  h2 .header-link svg {
    @apply top-[8px];
    @apply h-[18px] w-[18px];
  }

  h3 .header-link svg {
    @apply top-[6px];
    @apply h-[16px] w-[16px];
  }

  h4,
  h5,
  h6 {
    @apply hidden;
  }

  p {
    @apply my-normal;
    @apply leading-[1.6];
  }

  img {
    @apply my-little;

    @apply w-full;

    @apply bg-caption-bg dark:bg-caption-bg-dark;
    @apply rounded-md;
  }

  blockquote {
    @apply my-medium;
  }

  ul,
  ol {
    @apply ml-0 pl-0;
    @apply list-none;

    li {
      @apply relative;
      @apply pl-medium mb-little;

      &:last-child {
        @apply mb-0;
      }

      &:before {
        @apply absolute;
        @apply left-0 top-0;

        @apply font-display;
      }
    }

    // no tailwind support for counter resetting
    counter-reset: list-counter;

    li {
      counter-increment: list-counter;

      &:before {
        content: counter(list-counter) '.';
      }
    }
  }

  ul li:before {
    @apply content-['*'];
    @apply font-bold;
    @apply leading-[1.8];
    @apply pl-[6px];
  }

  .gatsby-resp-image-wrapper,
  > img {
    @apply rounded-md overflow-hidden;
    @apply isolate;
    @apply my-medium;
  }

  .TwoUp {
    .gatsby-resp-image-wrapper,
    > img {
      @apply my-0;
    }
  }

  .gatsby-resp-image-figure {
    @apply my-medium;

    .gatsby-resp-image-wrapper {
      @apply mt-0 mb-little;
    }

    .gatsby-resp-image-figcaption {
      @apply Caption;
    }
  }

  &.projects {
    .gatsby-resp-image-wrapper {
      @apply border border-img-border dark:border-img-border-dark;
    }

    span:first-of-type {
      @apply block;
      @apply mt-big md:mt-large;
    }

    span + span {
      @apply mt-medium block;
    }

    span span.gatsby-resp-image-wrapper,
    span.gatsby-resp-image-wrapper,
    span.gatsby-resp-image-background-image {
      @apply mt-0;
    }
  }
}

